# py-autovod

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TRANSCRIPTION.md  config.ini  default.config  default.ini  docker-compose.yml  entrypoint.sh  install.sh  main.py  pyproject.toml  requirements.txt  settings.py  setup.py  streamer.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: pylint.yml
examples/: transcription_example.py
models/: README.md
src/: clip.py  download_yt.py  gen_clip.py  logger.py  main.py  process_vid.py  processor.py  settings.py  stream_manager.py  stream_monitor.py  streamer.py  streamer_monitor.py  transcribe_file.py  transcription.py  uploader.py  utils.py
src/clipception/: __init__.py  clip.py  gen_clip.py  gpu_clip.py  gpu_clip2.py  process_vid_v4.py  test.py  transcription.py
