[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "py-autovod"
version = "1.0.0"
description = "Automatically download and upload streams in realtime"
authors = [{name = "0jc1", email = "you@example.com"}]

[tool.black]
skip-magic-trailing-comma = true
